fix(flex-05): solve after solution(used flex too much)

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -21,8 +21,8 @@ body {
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   display: flex;
-  padding: 10px;
-  gap: 10px;
+  padding: 16px;
+  gap: 16px;
 }
 
 .icon {
@@ -34,9 +34,9 @@ body {
   height: 42px;
   border-radius: 50%;
   display: flex;
-  flex-shrink: 0;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 .close-button {
@@ -72,21 +72,15 @@ button.cancel {
   color: royalblue;
 }
 
-
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  gap: 10px;
-}
-
 .header {
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.header-button{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.text {
+  margin-bottom: 8px;
 }
